--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "8.1.5",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+      "ext-pdo": "*"
     }
 }
