--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "practice/14_OOP"
+            "App\\": "practice/14_OOP",
+            "Tests\\": "Tests/14_OOP"
         }
     },
     "authors": [
@@ -15,8 +16,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "8.1.5",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
       "ext-pdo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "10.0.x-dev"
     }
 }
